Lógica da criação da senha

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Password Generator</title>
 </head>
 <body>
-    
+    <h1>Password Generator</h1>
+    <p>Use our website to create a strong and safe password for your accounts</p>
+    <input type="text" name="password" id="password">
+    <input type="range" name="password-length" id="password-length" value="8" min="4" max="64">
+    <button>Copy password</button>
+    <script src="script.js"></script>
 </body>
 </html>
