--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
     <title>Password Generator</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <p>Use our website to create a strong and safe password for your accounts</p>
     <input type="text" name="password" id="password">
     <input type="range" name="password-length" id="password-length" value="8" min="4" max="64">
-    <button>Copy password</button>
+    <button id="copyButton">Copy password</button>
     <script src="script.js"></script>
 </body>
 </html>
