--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="reset.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400..600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="reset.css" />
     <title>Password Generator</title>
-</head>
-<body>
-    <h1>Password Generator</h1>
-    <p>Use our website to create a strong and safe password for your accounts</p>
-    <input type="text" name="password" id="password">
-    <input type="range" name="password-length" id="password-length" value="8" min="4" max="64">
-    <button id="copyButton">Copy password</button>
+  </head>
+  <body>
+    <main>
+      <section class="hero">
+        <h1 class="title">Password Generator</h1>
+        <p class="subtitle">
+          Use our website to create a strong and safe password for your accounts
+        </p>
+      </section>
+
+      <section class="box">
+        <div class="password">
+          <div class="text">
+            <input type="text" name="password" id="password" />
+          </div>
+          <div class="actions">
+            <button id="copy">C</button>
+            <button id="renew">R</button>
+          </div>
+        </div>
+      </section>
+
+      
+      <input
+        type="range"
+        name="password-length"
+        id="password-length"
+        value="8"
+        min="4"
+        max="64"
+      />
+      <button id="copyButton">Copy password</button>
+    </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
