--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             type="range"
             name="password-length"
             id="password-length"
+            class="slider"
             value="8"
             min="4"
             max="64"
