Alterações layout botão copiar senha

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
           />
         </div>
       </section>
-
-      <button id="copy-2">Copy password</button>
+      <div class="submit">
+        <button id="copy-2">Copy password</button>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
