--- a/index.html
+++ b/index.html
@@ -37,17 +37,27 @@
           </div>
         </div>
         <div class="security-indicator">
-          <div
-            id="security-indicator-bar"
-            class="bar safe"
-            style="width: 100%"
-          ></div>
+          <div id="security-indicator-bar" class="bar" style="width: 90%"></div>
         </div>
       </section>
 
       <section class="box customize">
         <h3 class="title">Customize</h3>
-        <div class="password-length"></div>
+        <div class="actions">
+          <div class="password-length">
+            <p>Size: <span id="password-length-text">8</span></p>
+            <input
+              type="range"
+              name="password-length"
+              id="password-length"
+              class="slider"
+              value="16"
+              min="4"
+              max="64"
+            />
+          </div>
+        </div>
+
         <div class="config">
           <label class="checkbox-container">
             <span class="text">Maiúsculas</span>
@@ -64,18 +74,6 @@
             <input type="checkbox" id="numbers-check" checked />
             <span class="checkmark"></span>
           </label>
-        </div>
-        <div class="actions">
-          <p>Size <span id="password-length-text">16</span></p>
-          <input
-            type="range"
-            name="password-length"
-            id="password-length"
-            class="slider"
-            value="8"
-            min="4"
-            max="64"
-          />
         </div>
       </section>
       <div class="submit">
