--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="security-indicator">
-          <div id="security-indicator-bar" class="bar" style="width: 90%"></div>
+          <div id="security-indicator-bar" class="bar"></div>
         </div>
       </section>
 
@@ -51,7 +51,7 @@
               name="password-length"
               id="password-length"
               class="slider"
-              value="16"
+              value="8"
               min="4"
               max="64"
             />
