Modal de senha copiada

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         </div>
       </section>
 
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <p>Password copied</p>
+        </div>
+      </div>
+
       <section class="box customize">
         <h3 class="title">Customize</h3>
         <div class="actions">
